# EraeTouchLite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
demo-app/: CMakeLists.txt  demo_app.cpp  demo_app.h
docs/: README.md
erae-api/: CMakeLists.txt  EraeApi.cpp  EraeApi.h  LibreMidiDevice.cpp  LibreMidiDevice.h  MidiDevice.cpp  MidiDevice.h  QMidiDevice.h  RtMidiDevice.cpp  RtMidiDevice.h  SysExStream.h  erae_api.cpp  erae_api.h  sysexstream.h
erae-api/tests/: CMakeLists.txt  et_1.cpp  et_2.cpp
